# ErgoType.2

./: .gitignore  CHANGELOG_UI.md  C_SHARP_IMPLEMENTATION_SUMMARY.md  C_SHARP_README.md  DEBUG_CLEANUP_SUMMARY.md  ERROR_FIX_SUMMARY.md  ErgoType.sln  FITNESS_CACHING.md  FITNESS_NORMALIZATION_FIX.md  GA_VARIATIONS_README.md  HEATMAP_FIXES.md  HEATMAP_IMPROVEMENTS.md  HEATMAP_KEY_ID_IMPLEMENTATION.md  IMPLEMENTATION_GA_MODES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  KEY_ID_IMPLEMENTATION.md  POPULATION_PHASES.md  PROGRESS_BAR_AVAILABILITY.md  PROGRESS_BAR_USAGE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE_GA_MODES.md  README.md  SIMPLIFIED_WORKFLOW.md  STRUCTURE_SIMPLIFICATION.md  UI_IMPROVEMENTS.md  VISUAL_GUIDE_GA_MODES.md  appsettings.json  c3.odt  c4.odt  capitolul3_metodologia.md  capitolul4_implementarea_si_rezultate.md  data_analysis.ipynb  debug_finger.py  debug_fitness.py  debug_typer.py  demo_ga_queue.py  ergotype.2.sln  example_ga_queue.py  example_ga_queue_with_phases.py  (+69 more)
ErgoType.Core/: ErgoType.Core.csproj  Finger.cs  Individual.cs  Key.cs  Keyboard.cs  KeyboardFactory.cs  KeyboardLayout.cs  KeyboardLayoutOptimizer.cs
ErgoType.Data/: ErgoType.Data.csproj  KeyboardFactory.cs
ErgoType.Tests/: ErgoType.Tests.csproj  KeyboardLayoutTests.cs
ErgoType.UI/: ErgoType.UI.csproj  Program.cs  project.json
cs/: Class.cs  FitnessEvaluator.cs  GeneticAlgorithm.cs  Keyboard.cs  KeyboardFitness.csproj  KeyboardLayoutOptimizer.cs  Program.cs  README.md  cs.csproj  experiment.cs  makefile
docs/: GA_RUNS_QUEUE.md  GA_RUN_MODES.md  IMPLEMENTATION_SUMMARY.md  (+8 more)
(+147 files in other folders)
