[project]
name = "ergo-type"
version = "0.1.0"
description = "Genetic Algorithm for optimizing keyboard layouts"
authors = [{ name = "Cătălin Pleșu", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.2",
    "typer>=0.9.0",
    "GitPython",
    "pdfplumber",
    "matplotlib",
    "seaborn",
    "pandas",
    "numpy",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
	"kagglehub",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = []
